fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -174,4 +174,9 @@ h3 {
 	/*padding:10px;*/
 }
 
+.footer li {
+	list-style-type: none;
+	padding:10px;
+}
+
 }
